--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       p.lead {
        padding-top: 15px;
       }
-      .navigation, .pitch, .section1, .section2, .faaq, .footer {
+      .navigation, .pitch, .section1, .section2, .faq, .footer {
         padding: 10px 0px 10px 0px;
       }
       .video, .thermometer, .order, .social {
@@ -34,7 +34,7 @@
         line-height: 40px;
       }
       div.row {
-        border: 1px;
+        border: 1px solid;
       }
       </style>
     </head>
@@ -57,6 +57,9 @@
 	</div>
       </div>
       <div class="row subheading">
+	<div class="span12">
+	  <p class="lead">This is my first bitstarter project.</p>
+	</div>
 	<div class="row pitch">
 	  <div class="span6 video">
 	    Video
