--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
 	<!-- We define a new 'action' div to contain statistics, order, and share buttons-->
 	<div class="span5 actions">
+	  <div class="row-fluid">
 	  <div class="span8 offset2">
 	    <div class="statistics">
 	      <div class="span4">
@@ -166,6 +167,7 @@
 	      </div>
 	    </div>
 	  </div>
+	  <div class="row-fluid">
 	  <div class="span10 offset1">
 	    <!-- Bootstrap progress bar -->
 	    <div class="thermometer progress active">
@@ -173,14 +175,19 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
 	  </div>
+	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
 	    <!-- standard boorstrap button -->
 	    <button class="btn btn-success btn-large">Preorder</button>
 	  </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	  </div>
+	  </div>
+	</div>
 	</div>
       </div>
 
