--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           padding-top: 60px;
         }
         .linediv-l {
-          border-righth: 1px white solid;
+          border-right: 1px white solid;
         }
         .linediv-r {
           border-left: 1px white solid;
@@ -131,7 +131,7 @@
     <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Product: Development Version</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
@@ -149,7 +149,7 @@
 	<div class="span5 actions">
 	  <div class="row-fluid">
 	  <div class="span8 offset2">
-	    <div class="statistics">
+	    <div class="row-fluid statistics">
 	      <div class="span4">
 		<div class="linediv-l">
 		  <h3>1000</h3> <p>backers</p>
@@ -161,7 +161,7 @@
 		</div>
 	      </div>
 	      <div class="span4">
-		<div class="linefiv-r">
+		<div class="linediv-r">
 		  <h3>10</h3> <p>days left</p>
 		</div>
 	      </div>
@@ -174,6 +174,7 @@
 	      <div class="bar bar-success" style="width: 60%;"></div>
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
+	  </div>
 	  </div>
 	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
